# Generated by Django 3.2.6 on 2021-09-10 15:03

from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('experimenter', '0003_round_status'),
    ]

    operations = [
        migrations.CreateModel(
            name='Result',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('xml_content', models.CharField(blank=True, max_length=50, null=True)),
                ('round', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, to='experimenter.round')),
            ],
            options={
                'db_table': 'Result',
            },
        ),
    ]
